--- a/.github/workflows/pest.yml
+++ b/.github/workflows/pest.yml
@@ -9,6 +9,10 @@ on:
 jobs:
   pest:
     runs-on: ubuntu-latest
+    timeout-minutes: 3
+    concurrency:
+      group: ${{ github.workflow }}-${{ github.ref }}
+      cancel-in-progress: true
 
     steps:
       - name: Checkout repository
