--- a/.github/workflows/pint.yml
+++ b/.github/workflows/pint.yml
@@ -9,6 +9,10 @@ on:
 jobs:
   pint:
     runs-on: ubuntu-latest
+    timeout-minutes: 3
+    concurrency:
+      group: ${{ github.workflow }}-${{ github.ref }}
+      cancel-in-progress: true
 
     steps:
       - name: Checkout code
