--- a/.github/workflows/rector.yml
+++ b/.github/workflows/rector.yml
@@ -9,6 +9,10 @@ on:
 jobs:
   rector:
     runs-on: ubuntu-latest
+    timeout-minutes: 3
+    concurrency:
+      group: ${{ github.workflow }}-${{ github.ref }}
+      cancel-in-progress: true
 
     steps:
       - name: Checkout code
@@ -23,8 +27,9 @@ jobs:
         uses: actions/cache@v4
         with:
           path: /tmp/rector
-          key: ${{ runner.os }}-rector-${{ github.run_id }}
-          restore-keys: ${{ runner.os }}-rector-
+          key: ${{ runner.os }}-rector-${{ hashFiles('**/composer.lock') }}
+          restore-keys: |
+            ${{ runner.os }}-rector-
 
       - name: Run modern refactoring code checks
-        run: vendor/bin/rector --dry-run
+        run: vendor/bin/rector --dry-run --cache-directory=/tmp/rector
