--- a/composer.json
+++ b/composer.json
@@ -32,7 +32,7 @@
     },
     "autoload": {
         "psr-4": {
-            "DeployerPlus\\DeployerPHP\\": "src/app"
+            "DeployerPlus\\DeployerPHP\\": "app"
         }
     },
     "autoload-dev": {
