chore(build): simplify quality tool scripts
Remove conditional file checking from pint, pstan, and rect scripts:
- Run tools on all applicable files instead of only changed files
- Simplify script execution and remove bash complexity
- Maintain consistent code quality enforcement

--- a/composer.json
+++ b/composer.json
@@ -51,13 +51,13 @@
             "vendor/bin/pest --parallel --coverage"
         ],
         "pint": [
-            "bash -c 'FILES=$(composer changed-php-files 2>/dev/null | tail -n +2); if [ -n \"$FILES\" ]; then echo \"$FILES\" | xargs -r ./vendor/bin/pint --parallel; else echo \"No PHP files changed\"; fi'"
+            "vendor/bin/pint --parallel"
         ],
         "pstan": [
-            "bash -c 'FILES=$(composer changed-php-files:no-tests 2>/dev/null | tail -n +2); if [ -n \"$FILES\" ]; then echo \"$FILES\" | xargs -r ./vendor/bin/phpstan analyse --memory-limit=2G --; else echo \"No non-test PHP files changed\"; fi'"
+            "vendor/bin/phpstan analyse --memory-limit=2G"
         ],
         "rect": [
-            "bash -c 'FILES=$(composer changed-php-files 2>/dev/null | tail -n +2); if [ -n \"$FILES\" ]; then echo \"$FILES\" | xargs -r ./vendor/bin/rector process; else echo \"No PHP files changed\"; fi'"
+            "vendor/bin/rector process"
         ]
     },
     "config": {
