--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "deployer-plus/deployer-php",
+    "name": "bigpixelrocket/deployer-php",
     "description": "Deploy your PHP applications with ease",
     "type": "library",
     "keywords": [
@@ -32,12 +32,12 @@
     },
     "autoload": {
         "psr-4": {
-            "DeployerPlus\\DeployerPHP\\": "app"
+            "Bigpixelrocket\\DeployerPHP\\": "app"
         }
     },
     "autoload-dev": {
         "psr-4": {
-            "DeployerPlus\\DeployerPHP\\Tests\\": "tests/"
+            "Bigpixelrocket\\DeployerPHP\\Tests\\": "tests/"
         }
     },
     "bin": [
