--- a/composer.json
+++ b/composer.json
@@ -21,7 +21,7 @@
         "phpseclib/phpseclib": "^3.0",
         "symfony/console": "^6.0|^7.0",
         "symfony/dotenv": "^7.0",
-        "symfony/filesystem": "^6.0|^7.0",
+        "symfony/filesystem": "^7.1",
         "symfony/yaml": "^7.0"
     },
     "require-dev": {
