--- a/.github/workflows/testing-rules.yml
+++ b/.github/workflows/testing-rules.yml
@@ -10,7 +10,6 @@ on:
 jobs:
   testing-rules:
     runs-on: ubuntu-latest
-    timeout-minutes: 3
     concurrency:
       group: ${{ github.workflow }}-${{ github.ref }}
       cancel-in-progress: true
@@ -28,7 +27,7 @@ jobs:
         env:
           CURSOR_API_KEY: ${{ secrets.CURSOR_API_KEY }}
           GH_TOKEN: ${{ github.token }}
-          MODEL: 'gpt-5'
+          MODEL: 'claude-4-sonnet'
         run: |
           cursor-agent --force --model "$MODEL" --output-format=text --print "You are operating in a GitHub Actions runner performing automated code review. The gh CLI is available and authenticated via GH_TOKEN. You may comment on pull requests.
 
