--- a/.github/workflows/review.yml
+++ b/.github/workflows/review.yml
@@ -1,4 +1,4 @@
-name: Review Tests
+name: Review
 
 permissions:
   contents: read
@@ -8,7 +8,7 @@ on:
   pull_request:
 
 jobs:
-  review-tests:
+  review:
     runs-on: ubuntu-latest
     timeout-minutes: 3
     concurrency:
@@ -24,12 +24,12 @@ jobs:
           curl https://cursor.com/install -fsS | bash
           echo "$HOME/.cursor/bin" >> $GITHUB_PATH
 
-      - name: Review tests
+      - name: Code review
         env:
           CURSOR_API_KEY: ${{ secrets.CURSOR_API_KEY }}
           GH_TOKEN: ${{ github.token }}
         run: |
-          cursor-agent --force --model "claude-4-sonnet" --output-format=text --print "You are operating in a GitHub Actions runner performing automated code review. The gh CLI is available and authenticated via GH_TOKEN. You may comment on pull requests.
+          cursor-agent --force --model "x-ai/grok-4-fast:free" --output-format=text --print "You are operating in a GitHub Actions runner performing automated code review. The gh CLI is available and authenticated via GH_TOKEN. You may comment on pull requests.
 
           Context:
           - Repo: ${{ github.repository }}
@@ -37,10 +37,11 @@ jobs:
           - PR Head SHA: ${{ github.event.pull_request.head.sha }}
           - PR Base SHA: ${{ github.event.pull_request.base.sha }}
 
-          Review the current PR diff and...
-          1. report back on tests that fall short of our testing rules
-          2. identify gaps in our tests or missing tests
-          3. leave very short inline comments (1-2 sentences) on suggested changes and a brief summary at the end
+          Review the current PR diff and meticulously catalog all the changes in this branch.
+
+          Report back on where the changes fall short of our development, architecture and testing rules.
+
+          Leave very short inline comments (1-2 sentences) on suggested changes and a brief summary at the end.
 
           Procedure:
           - Get existing comments: gh pr view --json comments
@@ -53,6 +54,6 @@ jobs:
           - Use emojis: 🚨 Critical 🔒 Security ⚡ Performance ⚠️ Logic ✅ Resolved ✨ Improvement
 
           Submission:
-          - Submit one review containing inline comments plus a concise summary
           - Use only: gh pr review --comment
-          - Do not use: gh pr review --approve or --request-changes"
+          - Do not use: gh pr review --approve or --request-changes
+          - Submit one review containing inline comments plus a concise summary"
