--- a/.github/workflows/review.yml
+++ b/.github/workflows/review.yml
@@ -19,17 +19,21 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v4
 
-      - name: Install Cursor CLI
+      - name: Install opencode CLI
         run: |
-          curl https://cursor.com/install -fsS | bash
-          echo "$HOME/.cursor/bin" >> $GITHUB_PATH
+          curl -fsSL https://opencode.ai/install | bash
+          echo "$HOME/.opencode/bin" >> $GITHUB_PATH
 
       - name: Code review
         env:
-          CURSOR_API_KEY: ${{ secrets.CURSOR_API_KEY }}
+          OPENROUTER_API_KEY: ${{ secrets.OPENROUTER_API_KEY }}
           GH_TOKEN: ${{ github.token }}
         run: |
-          cursor-agent --force --model "x-ai/grok-4-fast:free" --output-format=text --print "You are operating in a GitHub Actions runner performing automated code review. The gh CLI is available and authenticated via GH_TOKEN. You may comment on pull requests.
+          cd ${{ github.workspace }}
+          opencode --model "x-ai/grok-4-fast:free" --output-format=text << 'EOF'
+          You are operating in a GitHub Actions runner performing automated code review.
+
+          The gh CLI is available and authenticated via GH_TOKEN. You may comment on pull requests.
 
           Context:
           - Repo: ${{ github.repository }}
@@ -56,4 +60,5 @@ jobs:
           Submission:
           - Use only: gh pr review --comment
           - Do not use: gh pr review --approve or --request-changes
-          - Submit one review containing inline comments plus a concise summary"
+          - Submit one review containing inline comments plus a concise summary
+          EOF
