--- a/.github/workflows/review.yml
+++ b/.github/workflows/review.yml
@@ -29,7 +29,10 @@ jobs:
           CURSOR_API_KEY: ${{ secrets.CURSOR_API_KEY }}
           GH_TOKEN: ${{ github.token }}
         run: |
-          cursor-agent --force --model "claude-4-sonnet" --output-format=text --print "You are operating in a GitHub Actions runner performing automated code review. The gh CLI is available and authenticated via GH_TOKEN. You may comment on pull requests.
+          cursor-agent --force --model "claude-4-sonnet" --output-format=text --print << 'EOF'
+          You are operating in a GitHub Actions runner performing a very thorough automated code review.
+
+          The gh CLI is available and authenticated via GH_TOKEN. You may comment on pull requests.
 
           Context:
           - Repo: ${{ github.repository }}
@@ -37,23 +40,28 @@ jobs:
           - PR Head SHA: ${{ github.event.pull_request.head.sha }}
           - PR Base SHA: ${{ github.event.pull_request.base.sha }}
 
+          # Instructions:
+
           Review the current PR diff and meticulously catalog all the changes in this branch.
 
           Report back on where the changes fall short of our development, architecture and testing rules.
 
-          Leave very short inline comments (1-2 sentences) on suggested changes and a brief summary at the end.
+          # Procedure:
 
-          Procedure:
-          - Get existing comments: gh pr view --json comments
+          Leave short inline comments (1-2 sentences) on suggested changes and a brief summary at the end.
+
           - Get diff: gh pr diff
+          - Get existing comments: gh pr view --json comments
           - If a previously reported issue appears fixed by nearby changes, reply: ✅ This issue appears to be resolved by the recent changes
           - Avoid duplicates: skip if similar feedback already exists on or near the same lines
 
-          Commenting rules:
+          **Commenting rules:**
+
           - Natural tone, specific and actionable; do not mention automated or high-confidence
           - Use emojis: 🚨 Critical 🔒 Security ⚡ Performance ⚠️ Logic ✅ Resolved ✨ Improvement
 
           Submission:
           - Use only: gh pr review --comment
           - Do not use: gh pr review --approve or --request-changes
-          - Submit one review containing inline comments plus a concise summary"
+          - Submit one review containing inline comments plus a concise summary
+          EOF
