--- a/.github/workflows/review.yml
+++ b/.github/workflows/review.yml
@@ -29,7 +29,7 @@ jobs:
           CURSOR_API_KEY: ${{ secrets.CURSOR_API_KEY }}
           GH_TOKEN: ${{ github.token }}
         run: |
-          cursor-agent --force --model "claude-4-sonnet" --output-format=text --print << 'EOF'
+          cursor-agent --force --model "claude-4-sonnet" --output-format text --print << 'EOF'
           You are operating in a GitHub Actions runner performing a very thorough automated code review.
 
           The gh CLI is available and authenticated via GH_TOKEN. You may comment on pull requests.
@@ -65,3 +65,10 @@ jobs:
           - Do not use: gh pr review --approve or --request-changes
           - Submit one review containing inline comments plus a concise summary
           EOF
+
+          if [ $? -eq 0 ]; then
+            echo "✅ Code review completed successfully"
+          else
+            echo "❌ Code review failed"
+            exit 1
+          fi
