--- a/composer.json
+++ b/composer.json
@@ -17,12 +17,12 @@
     ],
     "require": {
         "php": "^8.2",
-        "guzzlehttp/guzzle": "^7.0",
+        "guzzlehttp/guzzle": "^7.10",
         "phpseclib/phpseclib": "^3.0",
-        "symfony/console": "^6.0|^7.0",
-        "symfony/dotenv": "^7.0",
-        "symfony/filesystem": "^6.0|^7.0",
-        "symfony/yaml": "^7.0"
+        "symfony/console": "^7.3",
+        "symfony/dotenv": "^7.3",
+        "symfony/filesystem": "^7.3",
+        "symfony/yaml": "^7.3"
     },
     "require-dev": {
         "laravel/pint": "^1.25",
