--- a/phpstan.neon
+++ b/phpstan.neon
@@ -1,16 +1,7 @@
 parameters:
     paths:
+        - bin/
         - app/
-        - tests/
 
     # Level 10 is the highest level
     level: 10
-
-    excludePaths:
-        - ./tests/Arch/ (?)
-        - ./tests/Feature/ (?)
-        - ./tests/Integration/ (?)
-        - ./tests/Unit/ (?)
-        - ./tests/FeatureTestCase.php (?)
-        - ./tests/Pest.php (?)
-        - ./tests/TestCase.php (?)
