--- a/composer.json
+++ b/composer.json
@@ -27,6 +27,7 @@
     "require-dev": {
         "laravel/pint": "^1.25",
         "pestphp/pest": "^2.0",
+        "pestphp/pest-plugin-arch": "^2.7",
         "phpstan/phpstan": "^2.1",
         "rector/rector": "^2.1"
     },
