refactor(tests): reorganize unit tests to mirror app structure
Move service and contract tests into dedicated subdirectories matching
the app/ folder layout for better organization and discoverability.

Update namespaces and require paths in BaseCommandTest.php to reflect
the new location under Contracts/.

The HelloCommandTest.php integration test rename to Console/ was part
of aligning integration tests with the Console/ structure.

--- a/composer.json
+++ b/composer.json
@@ -37,9 +37,9 @@
         }
     },
     "autoload-dev": {
-        "psr-4": {
-            "Bigpixelrocket\\DeployerPHP\\Tests\\": "tests/"
-        }
+        "classmap": [
+            "tests/"
+        ]
     },
     "bin": [
         "bin/deployer"
