refactor: symfony app and pest migration (#17)
* chore(deps): update for Symfony Console and Pest integration

Adds Symfony components for CLI bootstrapping and Pest for modern testing. Enables app refactor and testing migration.

* chore(dev): add Cursor commands and editorconfig setup

* refactor(app): integrate Symfony Console with BaseCommand

Introduces BaseCommand contract and SymfonyApp kernel for modular CLI. Updates HelloCommand and entrypoint. Removes obsolete App.php.\n\nMotivation: Standardizes command structure for extensibility.

* refactor(services): align EnvService and InventoryService with Symfony

* test(migration): switch to Pest framework with base TestCase

Configures Pest, adds shared TestCase and helpers, updates SymfonyApp integration test. Removes legacy AppTest.\n\nMotivation: Simplifies test syntax and reduces boilerplate for better maintainability.

* test(unit): add architecture and BaseCommand tests; update services

Enforces code architecture rules and tests BaseCommand. Refines EnvService and InventoryService tests for Pest and refactored logic (e.g., consolidated overlaps).\n\nMotivation: Ensures architectural integrity and full coverage post-refactor.

* refactor(tests): reorganize unit tests to mirror app structure

Move service and contract tests into dedicated subdirectories matching
the app/ folder layout for better organization and discoverability.

Update namespaces and require paths in BaseCommandTest.php to reflect
the new location under Contracts/.

The HelloCommandTest.php integration test rename to Console/ was part
of aligning integration tests with the Console/ structure.

* test: restore original env vars in HelloCommandTest

Improved environment variable handling by storing originals in beforeEach and restoring them in afterEach, preventing pollution across tests.

* refactor: move imports to top in deployer script

Standardized import placement at the file top for better PHP conventions and added minor formatting.



--- a/composer.json
+++ b/composer.json
@@ -27,6 +27,7 @@
     "require-dev": {
         "laravel/pint": "^1.25",
         "pestphp/pest": "^2.0",
+        "pestphp/pest-plugin-arch": "^2.7",
         "phpstan/phpstan": "^2.1",
         "rector/rector": "^2.1"
     },
@@ -36,9 +37,9 @@
         }
     },
     "autoload-dev": {
-        "psr-4": {
-            "Bigpixelrocket\\DeployerPHP\\Tests\\": "tests/"
-        }
+        "classmap": [
+            "tests/"
+        ]
     },
     "bin": [
         "bin/deployer"
