--- a/composer.json
+++ b/composer.json
@@ -18,6 +18,7 @@
     "require": {
         "php": "^8.2",
         "guzzlehttp/guzzle": "^7.10",
+        "laravel/prompts": "^0.3.7",
         "phpseclib/phpseclib": "^3.0",
         "symfony/console": "^7.3",
         "symfony/dotenv": "^7.3",
